--- a/detail.html
+++ b/detail.html
@@ -122,7 +122,7 @@
 		<h1 style="margin-left:10px;font-family:AgencyFB">Comfy Family Home</h1>
 		<p id="typeHome" style="margin-left:10px;font-size:1em;float:left">Private Home</p>
 		<p style="margin-left:10px;font-size:1em;float:left">. &nbsp;</p>
-		<p id="locHome" style="margin-left:10px;font-size:1em;float:none;">Location</p>
+		<p id="locHome" style="margin-left:10px;font-size:1em;float:none;">Surabaya</p>
 		<p style="margin-left:10px;color:gray;float:left;">Hosted by </p>
 		<p id="nameHost" style="margin-left:10px;color:gray;float:none;">&nbsp;<a href="#" style="color:#f94d6e">Kenji</a></p>
 		<div class="profileHost" style="width:75px;height:75px;position:absolute;top:45%;right:30px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;"></div>
@@ -154,7 +154,7 @@
 		<a href='#' style="font-style:none;color:black;"><h5 style="margin-left:10px;">Contact Host</h5></a>
 		<hr>
 		<h5 style="margin-left:10px;">Reviews</h5>
-		<div id="reviews" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:80px;">			
+		<div id="reviews" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:10px;">			
 			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:10px;">
 				<div class="fotoUser" style="width:50px;height:50px;position:relative;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;float:left"></div>
 			</div>
@@ -165,6 +165,7 @@
 			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
 			<hr>
 		</div>
+		<p style="margin-left:10px;margin-bottom:80px;font-size:1em;">Exact location information is provided after a booking is confirmed.</p>
 		<footer>
 			<div class="price" style="text-align:left;margin-top:10px;margin-left:10px;font-size:1.5em;font-weight:bold;float:left">Rp. 10.250.000,00</div><div style="float:left;text-align:left;font-size:1em;margin-top:15px;margin-left:5px;">per night</div>
 			<div class="captReview" style="font-size:1em;margin-left:10px;clear:both;position:absolute;bottom:10px;">Rates 4 of 5</div>
