--- a/booking.html
+++ b/booking.html
@@ -78,20 +78,36 @@
         </div>
         </ons-toolbar>
 		
-		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;">
+		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;margin-top:10px;">
 			<form method='post' class="editProf" align="left">
 				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Full name</p>
 				<input type="text" name="txtName" value=""><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Email</p>
-				<input type="text" name="txtEmail" value="" placeholder="Email"><br>
+				<input type="text" name="txtEmail" value=""><br>
+				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">ID Number</p>
+				<input type="text" name="txtID" value=""><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Phone Number</p>
 				<input type="text" name="txtPhone" value=""><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Phone Number</p>
-				<input type="text" name="txtPhone" value=""><br>
+				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Check In</p>
+				<input type="date" id="dateCI" name="dateCheckIn" min="" value="" disabled><br>
+				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Check Out</p>
+				<input type="date" id="dateCO" name="dateCheckIn" min="" value="" disabled><br>
+				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Guests</p>
+				<div id="guest" style="width:auto height:auto; margin-left:20px;position:absolute">
+					<div id="plusButton" style="width:2em;height:2em;position:relative;border-radius:50px;margin-top:5px;background-image:url(img/min.png);background-size:cover;repeat:no-repeat;float:left;"></div>
+					<input type="text" id="numberGuest" name="txtNumberGuests" value="1" style="width:60%;float:left;position:relative">
+					<div id="plusButton" style="width:2em;height:2em;position:relative;margin-left:20px;margin-top:5px;border-radius:50px;background-image:url(img/add.png);background-size:cover;repeat:no-repeat;float:left;"></div>
+				</div>
+				<p align="left" style="margin-top:70px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Harga permalam x malam</p>
+				<p id="subTotal" align="left" style="margin-top:70px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
+				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Service Fee</p>
+				<p id="serviceFee" align="left" style="margin-top:60px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
+				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left">Total</p>
+				<p id="grandTotal" align="left" style="margin-top:60px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;margin-bottom:80px;">Rp xxxxxxxx</p>				
 		</div>
 		
 		<footer style="text-align:right;padding-right:20px;">
-				<input type="button" name="btnBooking" value="Save" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
+				<input type="button" name="btnBooking" value="Book" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
 				<input type="button" name="btnCancel" value="Cancel" style="width:30%;height:60%;background-color:white;border-radius:10px;font-size:1.5em;color:#f94d6e;top:20%;position:relative;">
 			</form>
 		</footer>
