see_more commit

--- a/see_more.html
+++ b/see_more.html
@@ -13,38 +13,14 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>		
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.js"></script>
-		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
-		
-		<link rel="stylesheet" href="node_modules/onsenui/css/onsenui.css">
-		<link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.min.css">
-		
-		<script>
-			$(function() {
-				$("#banner > div:gt(0)").hide();
-				setInterval(function() {
-				  $('#banner > div:first')
-					.fadeOut(1000)
-					.next()
-					.fadeIn(1000)
-					.end()
-					.appendTo('#banner');
-				},  3000);
-			});
-		</script>
-		
-		<style>
-		  .carousel-inner > .item > img,
-		  .carousel-inner > .item > a > img{
-			  width: 100%;
-			  margin: auto;
-		  }
-	  </style>	
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+    <script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
+    <link rel="stylesheet" href="node_modules/onsenui/css/onsenui.css">
+    <link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.min.css">
+
 	</head>
 
 	<body>
@@ -78,38 +54,42 @@
         </div>
         </ons-toolbar>
 		
-		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;margin-top:10px;">
-			<form method='post' class="editProf" align="left">
-				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Full name</p>
-				<input type="text" name="txtName" value=""><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Email</p>
-				<input type="text" name="txtEmail" value=""><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">ID Number</p>
-				<input type="text" name="txtID" value=""><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Phone Number</p>
-				<input type="text" name="txtPhone" value=""><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Check In</p>
-				<input type="date" id="dateCI" name="dateCheckIn" min="" value="" disabled><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Check Out</p>
-				<input type="date" id="dateCO" name="dateCheckIn" min="" value="" disabled><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Guests</p>
-				<div id="guest" style="width:auto height:auto; margin-left:20px;position:absolute">
-					<div id="plusButton" style="width:2em;height:2em;position:relative;border-radius:50px;margin-top:5px;background-image:url(img/min.png);background-size:cover;repeat:no-repeat;float:left;"></div>
-					<input type="text" id="numberGuest" name="txtNumberGuests" value="1" style="width:60%;float:left;position:relative">
-					<div id="plusButton" style="width:2em;height:2em;position:relative;margin-left:20px;margin-top:5px;border-radius:50px;background-image:url(img/add.png);background-size:cover;repeat:no-repeat;float:left;"></div>
+		<div class="center">
+    		<div class='cTitle'>
+				<div class='cFormDalam'>
+					<h1><input type="text" id="timo" placeholder="Search"/></h1>
 				</div>
-				<p align="left" style="margin-top:70px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Harga permalam x malam</p>
-				<p id="subTotal" align="left" style="margin-top:70px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
-				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Service Fee</p>
-				<p id="serviceFee" align="left" style="margin-top:60px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
-				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left">Total</p>
-				<p id="grandTotal" align="left" style="margin-top:60px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;margin-bottom:80px;">Rp xxxxxxxx</p>				
+      		</div>
+        </div>
+        
+		<div style="width:100%;height:calc(100% - 50px);">
+			<div class="horizontal-menu-fav" style="display:absolute;">
+				<div class="detailFavorite" style="display:inline-block;">
+					<div class="img-feature"><center><img src='img/home.jpg' style="width:100%;height:100%;"></center></div>
+					<div class="content">
+						<h5><b>Kebab Kings, Dhar...</b></h5>
+						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
+					</div>
+				</div>	
+			</div>
 		</div>
-		
-		<footer style="text-align:right;padding-right:20px;">
-				<input type="button" name="btnBooking" value="Book" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
-				<input type="button" name="btnCancel" value="Cancel" style="width:30%;height:60%;background-color:white;border-radius:10px;font-size:1.5em;color:#f94d6e;top:20%;position:relative;">
-			</form>
+
+       <footer>
+			<div class="" style="float:left;width:20%;">
+        <a href="next.html"><img src="img/explore_active.png" alt="" style="width:100%;height:100%;"></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="#"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="#"><img src="img/inbox.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
+			<div class="" style="float:left;width:20%;">
+				<a href="profile.html"><img src="img/profile.png" alt="" style="width:100%;height:100%;"><br></a>
+			</div>
 		</footer>
   </ons-page>
   </template>
