--- a/next.html
+++ b/next.html
@@ -30,9 +30,9 @@
         <ons-page>
           <ons-list id="chatMember">
             <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
-            <a href="next.html" style="font-style:none"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
+            <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
-            <a href="profile.html" style="font-style:none"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
+            <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>Support</ons-list-item>
             <ons-list-item style="position:absolute;overflow:hidden;bottom:0;" class="mentionBtn" onclick="onBackKeyDown()" tappable>Logout</ons-list-footer>
           </ons-list>
@@ -65,7 +65,7 @@
 
 		<div style="width:100%;height:calc(100% - 50px);">
 		  <span class="header-slider">For You</span>
-		  <div class='seeMore'>See More ></div>
+		  <div class='seeMore'><a href="see_more.html" style="text-decoration:none;color:#f94d6e;">See More ></a></div>
 			<div class="horizontal-menu" style="display:absolute;">
         <a href="detail.html">
             <div class="detailRestoranBtn" style="display:inline-block;">
@@ -104,7 +104,7 @@
         </div>
 
 		<span class="header-slider">Experiences</span>
-		<div class='seeMore'>See More ></div>
+		<div class='seeMore'><a href="see_more.html" style="text-decoration:none;color:#f94d6e;">See More ></a></div>
             <div class="horizontal-menu" style="display:absolute;">
             <div class="detailRestoranBtn" style="display:inline-block;">
 				<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
@@ -141,7 +141,7 @@
         </div>
 
 		<span class="header-slider">Cozy Home</span>
-		<div class='seeMore'>See More ></div>
+		<div class='seeMore'><a href="see_more.html" style="text-decoration:none;color:#f94d6e;">See More ></a></div>
         <div class="horizontal-menu" style="display:absolute;">
             <div class="detailRestoranBtn" style="display:inline-block;">
 				<div class="img-feature"><center><img src='img/src1.png' style="width:100%;height:100%;"></center></div>
