--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
   <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
   <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <!--<script type="text/javascript" src="js/index.js"></script>-->
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
@@ -19,150 +19,131 @@
   		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
-	<body>
+	<body class="bodylogin">
 		<div id='iCont' style="position:absolute;height:50%;margin-top:30%;">
-			<div class='cTitle'>
+			<div class='cTitleLogin'  style='font-family: HNLight; color:white;'>
 				<img src='logo.png' width='70%'>
+        <br>
+        <p style='font-size:20px;'><b>We want to Know you further!</b></p>
+
+        <br>
 			</div>
 			<div class='cFormLogin'>
 				<form method='post'>
-						<center><input type="text" placeholder="Username" name="user" id="txtUser">
+						<center class="centerlogin">
+            <input type="text" placeholder="Email Username" name="user" id="txtUser">
 						<br>
 						<input type="password" placeholder="Password" name="pass" id="txtPass">
 						<br>
-						<input type="text" placeholder="Name" name="nama" id="txtNama">
+						<input type="text" placeholder="Full Name" name="nama" id="txtNama">
 						<br>
-						<select name="comboGender" placeholder="Gender" id="cmbGender">
+						<select name="comboGender" placeholder="Gender" id="cmbGender" >
 							<option value="-" selected disabled>Gender</option>
 							<option value="Female">Female</option>
 							<option value="Male">Male</option>
 						</select>
 						<br>
-						<input type="date" name="datePickDoB" placeholder="Date of Birth" id="datePick">
+            <input placeholder="Date of Birth" class="textbox-n" type="text" onfocus="(this.type='date')"  id="datePick">
+						<!--<input type="date" name="datePickDoB" placeholder="Date of Birth" id="datePick" placeholder="Date of Birth">-->
 						<br>
 						<input type="button" onclick="regis()" class='cBtnLogin' name="btnRegis" value="Register">
 
 				</form>
 			</div>
-            <div id="cobaAjax">
-
-            </div>
 		</div>
 
 	</body>
   <script type="text/javascript">
-  var server = "http://workastation.hol.es/sdpajax/server.php";
+  var server = "http://192.168.1.3/sdpajax/server.php";
     document.addEventListener("deviceready", onDeviceReady, false);
     function alertDismissed() {
     // do something
     }
-    window.onload = function() {
-      var getInput = document.getElementById('txtUser');
-      localStorage.setItem("storageName",getInput);
-    };
 
     function onDeviceReady(){
-        window.plugins.googleplus.disconnect(
-          function (msg) {
-            alert("Berhasil Logout Google"); // do something useful instead of alerting
-          },function (msg) {
-            alert("Gagal Logout Google"); // do something useful instead of alerting
-          }
-        );
-        facebookConnectPlugin.logout(function (msg) {
-          alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
-        }, function (msg) {
-          alert("Gagal Logout Facebook"); // do something useful instead of alerting
-        });
     }
 
     function onBackKeyDown() {
-      var x = confirm("Are you sure ?");
-      window.plugins.googleplus.disconnect(
-        function (msg) {
-          alert("Berhasil Logout Google"); // do something useful instead of alerting
-        },function (msg) {
-          alert("Gagal Logout Google"); // do something useful instead of alerting
-          x=false;
-          alert(msg);
-
-        }
-      );
-      facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
-        alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
-      }, function (msg) {
-        alert("Gagal Logout Facebook"); // do something useful instead of alerting
-        x=false;
-        alert(msg);
-      });
-      facebookConnectPlugin.logout(function (msg) {
-        alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
-      }, function (msg) {
-        alert("Gagal Logout Facebook"); // do something useful instead of alerting
-        x=false;
-        alert(msg);
-      });
-
-      if(x){
-        if (navigator.app) {
-            navigator.app.exitApp();
-        } else if (navigator.device) {
-            navigator.device.exitApp();
-        } else {
-            window.close();
-        }
-      }
     }
-  function myfunc(){
-    window.plugins.googleplus.login({},function (obj) {
-      alert(JSON.stringify(obj)); // do something useful instead of alerting
-    },
-    function (msg) {
-      alert('error: ' + msg);
-    });
-  };
-  function myfuncfb(){
-    var fbLoginSuccess = function(result){
-    //calling api after login success
-    facebookConnectPlugin.api("/me?fields=email,name,birthday",['email','user_birthday','public_profile'],function(userData){
-    //API success callback
-      alert("User Info : "+userData.email+"\n Hello ! Our Beloved : "+userData.name +"\n We Want to Remind You that your Birthday is : "+userData.birthday);
-      },function(error){
-    //API error callback
-      alert(JSON.stringify(error));
-      });
-    }
-    //alert("user Info : "+userData.name+" Hello "+userData.email);
-    //document.getElementById("cobaAjax").innerHTML=JSON.stringify(userData);
-    //alert("UserInfo: "+userData['email'] + "\n Hello "+userData['name']+" Good to see you");
-    //};
-    facebookConnectPlugin.login(['email','user_birthday','public_profile'], fbLoginSuccess,
-    function loginError (error) {
-    alert(JSON.stringify(error));
-  });
-  };
-  function pindah(){
 
-    var getInput = document.getElementById('txtUser').value;
-    localStorage.setItem("storageName",getInput);
-    window.location = "next.html";
-      navigator.notification.alert(
-          'You Are Login!',  // message
-          alertDismissed,         // callback
-          'Notif Login',            // title
-          'Done'                  // buttonName
-      );
-  }
   function regis(){
-  var getInputUser = document.getElementById('txtUser').value;
-  var getInputPass = document.getElementById('txtPass').value;
-  var getInputNama = document.getElementById('txtNama').value;
-    $.post(server, {'user': getInputUser ,'pass': getInputPass, 'nama': getInputNama, 'tipe': 2},function(data){
-      alert(data);
-      window.location = "index.html";
-    });
+    var getInputUser = document.getElementById('txtUser').value;
+    var getInputPass = document.getElementById('txtPass').value;
+    var getInputNama = document.getElementById('txtNama').value;
+    var getInputGender = document.getElementById('cmbGender').value;
+    var getInputDoB = document.getElementById('datePick').value;
+    var tahun = getInputDoB.split("-");
+    tahun = parseInt(tahun[0]);
+    var a = new Date();
+    a = a.getFullYear();
+    if(a - tahun < 17) alert("You must reach 17 years old or older");
+      $.post(server, {'user': getInputUser ,'pass': getInputPass, 'nama': getInputNama, 'tipe': "ajaxRegister"},function(data){
+        if(data == "a"){
+          alert("Berhasil Register!");
+        }else if(data == "b"){
+
+        }else{
+          alert(data);
+        }
+        window.location = "index.html";
+      });
   }
   app.initialize();
+/*
 
+  navigator.notification.alert(
+      'You Are Login!',  // message
+      alertDismissed,         // callback
+      'Notif Login',            // title
+      'Done'                  // buttonName
+  );
+    window.plugins.googleplus.disconnect(
+      function (msg) {
+        alert("Berhasil Logout Google"); // do something useful instead of alerting
+      },function (msg) {
+        alert("Gagal Logout Google"); // do something useful instead of alerting
+      }
+    );
+    facebookConnectPlugin.logout(function (msg) {
+      alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+    }, function (msg) {
+      alert("Gagal Logout Facebook"); // do something useful instead of alerting
+    });
+
+  var x = confirm("Are you sure ?");
+  window.plugins.googleplus.disconnect(
+    function (msg) {
+      alert("Berhasil Logout Google"); // do something useful instead of alerting
+    },function (msg) {
+      alert("Gagal Logout Google"); // do something useful instead of alerting
+      x=false;
+      alert(msg);
+
+    }
+  );
+  facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
+    alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+  }, function (msg) {
+    alert("Gagal Logout Facebook"); // do something useful instead of alerting
+    x=false;
+    alert(msg);
+  });
+  facebookConnectPlugin.logout(function (msg) {
+    alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+  }, function (msg) {
+    alert("Gagal Logout Facebook"); // do something useful instead of alerting
+    x=false;
+    alert(msg);
+  });
+
+  if(x){
+    if (navigator.app) {
+        navigator.app.exitApp();
+    } else if (navigator.device) {
+        navigator.device.exitApp();
+    } else {
+        window.close();
+    }
+  }*/
   </script>
 </html>
