--- a/register.html
+++ b/register.html
@@ -61,6 +61,8 @@
     }
 
     function onDeviceReady(){
+    var ini = localStorage.getItem("storageName");
+    //alert(ini);
     }
 
     function onBackKeyDown() {
