--- a/next.html
+++ b/next.html
@@ -198,77 +198,83 @@
   </template>
 	</body>
   <script type="text/javascript">
-  var server = "http://workastation.hol.es/sdpajax/server.php";
-  function getIp() {
-      ons.notification.prompt({message: 'Masukkan ip server'}).then(function(answer) {
-          if(answer.trim() == '')
-              getIp();
-          else {
-              server += answer;
-              server += '/sdpajax/server.php';
-          }
-      });
-  }
+  var server = "http://192.168.1.3/sdpajax/server.php";
+
     document.addEventListener("deviceready", onDeviceReady, false);
-    ons.ready(function() {
-          /*getIp();
-          $.post(server, {'user': 'timo', 'tipe': 2},function(data){
-            cordova.plugins.notification.local.schedule({
-                id: 10,
-                title: "Berhasil Login",
-                text: "Halo "+data['nama']+"!"
-            });
-          });
-
-          // makeNotification(0, 'ini title', 'ini isi dari text');
-          /*cordova.plugins.notification.local.on("click", function(notification) {
-              cordova.plugins.notification.local.clearAll();
-          });*/
-
-
-          // navigator.vibrate([300, 10, 150, 10, 150]);
-      });
-      $(document).ready(onDeviceReady());
     function onDeviceReady(){
-      //getIp();
-      $.post(server, {'user': localStorage.getItem("storageName"), 'tipe': 3},function(data){
-        data = JSON.parse(data);
-        cordova.plugins.notification.local.schedule({
-            id: 5,
-            title: "Berhasil Login",
-            text: "Halo "+data['name']+"!"
-        });
-      });
-
-    };
-  function myfunc(){
-    window.plugins.googleplus.login({},function (obj) {
-      alert(JSON.stringify(obj)); // do something useful instead of alerting
-    },
-    function (msg) {
-      alert('error: ' + msg);
-    });
-  };
-  function myfuncfb(){
-    var fbLoginSuccess = function(result){
-    //calling api after login success
-    facebookConnectPlugin.api("/me?fields=email,name,birthday",['email','user_birthday','public_profile'],function(userData){
-    //API success callback
-      alert("User Info : "+userData.email+"\n Hello ! Our Beloved : "+userData.name +"\n We Want to Remind You that your Birthday is : "+userData.birthday);
-      },function(error){
-    //API error callback
-      alert(JSON.stringify(error));
-      });
+      var ini = localStorage.getItem("storageName");
+      //alert(ini);
     }
-    //alert("user Info : "+userData.name+" Hello "+userData.email);
-    //document.getElementById("cobaAjax").innerHTML=JSON.stringify(userData);
-    //alert("UserInfo: "+userData['email'] + "\n Hello "+userData['name']+" Good to see you");
-    //};
-    facebookConnectPlugin.login(['email','user_birthday','public_profile'], fbLoginSuccess,
-    function loginError (error) {
-    alert(JSON.stringify(error));
-  });
-  };
+    /*function getIp() {
+        ons.notification.prompt({message: 'Masukkan ip server'}).then(function(answer) {
+            if(answer.trim() == '')
+                getIp();
+            else {
+                server += answer;
+                server += '/sdpajax/server.php';
+            }
+        });
+        //getIp();
+        $.post(server, {'user': localStorage.getItem("storageName"), 'tipe': 3},function(data){
+          data = JSON.parse(data);
+          cordova.plugins.notification.local.schedule({
+              id: 5,
+              title: "Berhasil Login",
+              text: "Halo "+data['name']+"!"
+          });
+        });
+        ons.ready(function() {
+              /*getIp();
+              $.post(server, {'user': 'timo', 'tipe': 2},function(data){
+                cordova.plugins.notification.local.schedule({
+                    id: 10,
+                    title: "Berhasil Login",
+                    text: "Halo "+data['nama']+"!"
+                });
+              });
+
+              // makeNotification(0, 'ini title', 'ini isi dari text');
+              /*cordova.plugins.notification.local.on("click", function(notification) {
+                  cordova.plugins.notification.local.clearAll();
+              });*/
+
+
+              // navigator.vibrate([300, 10, 150, 10, 150]);
+              /*
+          });
+          $(document).ready(onDeviceReady());
+
+        function myfunc(){
+          window.plugins.googleplus.login({},function (obj) {
+            alert(JSON.stringify(obj)); // do something useful instead of alerting
+          },
+          function (msg) {
+            alert('error: ' + msg);
+          });
+        };
+        function myfuncfb(){
+          var fbLoginSuccess = function(result){
+          //calling api after login success
+          facebookConnectPlugin.api("/me?fields=email,name,birthday",['email','user_birthday','public_profile'],function(userData){
+          //API success callback
+            alert("User Info : "+userData.email+"\n Hello ! Our Beloved : "+userData.name +"\n We Want to Remind You that your Birthday is : "+userData.birthday);
+            },function(error){
+          //API error callback
+            alert(JSON.stringify(error));
+            });
+          }
+          //alert("user Info : "+userData.name+" Hello "+userData.email);
+          //document.getElementById("cobaAjax").innerHTML=JSON.stringify(userData);
+          //alert("UserInfo: "+userData['email'] + "\n Hello "+userData['name']+" Good to see you");
+          //};
+          facebookConnectPlugin.login(['email','user_birthday','public_profile'], fbLoginSuccess,
+          function loginError (error) {
+          alert(JSON.stringify(error));
+        });
+        };
+    }*/
+
+
   function onBackKeyDown(){
     makeNotification();
     $.post(server, {'chat': chat, 'nama': nama, 'tipe': 2});
