commit gara2 peringatan

--- a/booking.html
+++ b/booking.html
@@ -98,17 +98,18 @@
 					<input type="text" id="numberGuest" name="txtNumberGuests" value="1" style="width:60%;float:left;position:relative">
 					<div id="plusButton" style="width:2em;height:2em;position:relative;margin-left:20px;margin-top:5px;border-radius:50px;background-image:url(img/add.png);background-size:cover;repeat:no-repeat;float:left;"></div>
 				</div>
-				<p align="left" style="margin-top:70px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Harga permalam x malam</p>
-				<p id="subTotal" align="left" style="margin-top:70px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
-				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Service Fee</p>
-				<p id="serviceFee" align="left" style="margin-top:60px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
-				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left">Total</p>
-				<p id="grandTotal" align="left" style="margin-top:60px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;margin-bottom:80px;">Rp xxxxxxxx</p>				
+				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Location Detail</p>
+				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.3em;font-weight:none;position:relative;color:gray;">Ngagel Jaya Tengah No. 70-73, Kecamatan Gubeng, Surabaya, Jawa Timur</p>
+				<p align="left" style="margin-top:20px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Harga permalam x malam</p>
+				<p id="subTotal" align="left" style="margin-top:20px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
+				<p align="left" style="margin-top:20px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left;color:lightgray;">Service Fee</p>
+				<p id="serviceFee" align="left" style="margin-top:20px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;;color:lightgray;">Rp xxxxxxxx</p><br><br>
+				<p align="left" style="margin-top:20px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;float:left">Total</p>
+				<p id="grandTotal" align="left" style="margin-top:20px;right:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:absolute;color:gray;margin-bottom:80px;">Rp xxxxxxxx</p>				
 		</div>
 		
 		<footer style="text-align:right;padding-right:20px;">
 				<input type="button" name="btnBooking" value="Book" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
-				<input type="button" name="btnCancel" value="Cancel" style="width:30%;height:60%;background-color:white;border-radius:10px;font-size:1.5em;color:#f94d6e;top:20%;position:relative;">
 			</form>
 		</footer>
   </ons-page>
