--- a/detail.html
+++ b/detail.html
@@ -120,9 +120,7 @@
          <button id="cardScanBtn">Advanced: Use card.io scan only</button>
 		<img class="heartFav" src="img/heart.png" style="width:10%;height:5%;position:absolute;top:10px;right:10px;">
 		<h1 style="margin-left:10px;font-family:AgencyFB">Comfy Family Home</h1>
-		<p id="typeHome" style="margin-left:10px;font-size:1em;float:left">Private Home</p>
-		<p style="margin-left:10px;font-size:1em;float:left">. &nbsp;</p>
-		<p id="locHome" style="margin-left:10px;font-size:1em;float:none;">Surabaya</p>
+		<p style="margin-left:10px;font-size:1em;">Surabaya</p>
 		<p style="margin-left:10px;color:gray;float:left;">Hosted by </p>
 		<p id="nameHost" style="margin-left:10px;color:gray;float:none;">&nbsp;<a href="#" style="color:#f94d6e">Kenji</a></p>
 		<div class="profileHost" style="width:75px;height:75px;position:absolute;top:45%;right:30px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;"></div>
@@ -138,7 +136,7 @@
 			</div>
 			<div class="fasil" style="width:25%;height:100%;float:left">
 				<img src='img/bed.png' style="width:70%;height:70%;"><br>
-				<p>4 Single Beds</p>
+				<p>4 Beds</p>
 			</div>
 			<div class="fasil" style="width:25%;height:100%;float:left">
 				<img src='img/bath.png' style="width:70%;height:70%;"><br>
