--- a/profile.html
+++ b/profile.html
@@ -87,7 +87,7 @@
 			<hr>
 			<a href="edit_profile.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">View and Edit Profile</div></a>
 			<hr>
-			<a href="host.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Become a Host</div></a>
+			<a href="becomehost.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Become a Host</div></a>
 			<hr>
 			<a href="feedback.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Give us Feedback</div></a>
 			<hr>
