--- a/becomehost.html
+++ b/becomehost.html
@@ -78,16 +78,13 @@
         </div>
         </ons-toolbar>
 		
-		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;">
-			<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;margin-top:20px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:10px;"></div>
-			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
+		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;margin-top:10px;">
 			<form method='post' class="editProf" align="left">
-				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Feedback</p>
-				<textarea name="txtFeedback" placeholder="Write your opinion..." style="width:90%;height:150px;position:absolute;left:0px;margin-left:20px;padding:10px 10px 10px 10px;"></textarea>
+			
 		</div>
 		
-		<footer style="text-align:right;padding-right:20px;">
-				<input type="button" name="btnSubmit" value="Submit" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
+		<footer style="text-align:right;padding-right:20px;">			
+				<input type="button" name="btnStart" value="Get Started" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
 			</form>
 		</footer>
   </ons-page>
