--- a/becomehost.html
+++ b/becomehost.html
@@ -78,8 +78,7 @@
         </div>
         </ons-toolbar>
 		
-		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;margin-top:10px;">
-			<form method='post' class="editProf" align="left">
+		<div class="contProfile" style="width:100%;height:100%;margin-top:-10px;background-image:url(img/host.jpg);background-size:cover;repeat:no-repeat;">
 			
 		</div>
 		
